# Vencord-Launcher

./: Vencord-Launcher.code-workspace  pyproject.toml
src/: autostart_utils.py  config_utils.py  logging_utils.py  main.py  vencord_ops.py
