[project]
name = "vencord-launcher"
version = "0.1.0"
description = "Vencord Launcher"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "json5",
    "pyinstaller",
]

[dependency-groups]
dev = [
    "pyright",
    "ruff",
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
exclude = ["**/__pycache__", "**/*.old"]
stubPath = "./stubs"
extraPaths = ["./src"]

# Check here for a full list of options: https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-settings-defaults
deprecateTypingAliases = false
reportImplicitOverride = "warning"
reportMatchNotExhaustive = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPropertyTypeMismatch = "warning"
reportShadowedImports = "warning"
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryTypeIgnoreComment = "information"
reportUnusedClass = "warning"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
